<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margins">

    <LinearLayout
            android:id="@+id/parentView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_margins">

        <LinearLayout
                android:id="@+id/ll_central_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions|textCapSentences"
                        android:maxLength="24"
                        android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_author"
                    android:layout_width="match_parent"
                    android:hint="@string/author"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions|textCapSentences"
                        android:maxLength="24"
                        android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_isbn"
                    android:layout_width="match_parent"
                    android:hint="@string/isbn"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_isbn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="-0123456789"
                        android:inputType="textNoSuggestions|number"
                        android:maxLength="17"
                        android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_pages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pages">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:inputType="textNoSuggestions|number"
                    android:maxLength="20"
                    android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_margins"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:text="@string/rate"/>

        <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"/>
    </LinearLayout>

    <Button
            android:id="@+id/bt_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="@style/Widget.AppCompat.Button"
            android:layout_above="@+id/bt_remove"
            android:layout_centerHorizontal="true"/>
    <Button
            android:id="@+id/bt_remove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>
